# tenta-client

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: test.yml
docs/: package-lock.json  package.json  style.css  theme.config.jsx
docs/pages/: _meta.json  api-reference.mdx  examples.mdx  index.mdx
scripts/: generate_docs.py
tenta/: client.py  types.py
tests/: test_docs.py  test_static_types.py
