[project]
name = "tenta"
version = "0.1.4"
description = "Python client library for Tenta, a sensor network management tool"
authors = [{ name = "Moritz Makowski", email = "moritz.makowski@tum.de" }]
dependencies = ["paho-mqtt>=2.1.0"]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[project.urls]
repository = "https://github.com/tum-esm/tenta-client"
documentation = "https://tenta-python-client.netlify.app/"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-order>=1.2.1",
    "pydoc-markdown>=4.8.2",
    "yapf>=0.40.2",
]

[tool.mypy]
strict = true
implicit_reexport = true

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[tool.pdm.build]
includes = ["tenta"]
excludes = ["tests", "docs"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
